# desktop

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/executive/: filter_chain.cpp  filter_chain.h
src/filters/: descriptor.cpp  descriptor.h  gui.cpp  gui.h  gui_subchain.cpp  gui_subchain.h  input.cpp  input.h
src/misc/: config.cpp  config.h
src/obsolete/filters/: descriptor.cpp  gui_subchain.cpp
src/platform/win/: version.rc
src/resource/: readme  resource.cpp  resource.qrc
src/ui/: filter_config_widgets.cpp  filter_config_widgets.h  filter_config_window.cpp  filter_config_window.h  filters_window.cpp  filters_window.h  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  moc_filter_config_window.cpp  moc_filters_window.cpp  moc_main_window.cpp  moc_mainwindow.cpp  moc_simulation_window.cpp  parameters_optimization_dialog.cpp  parameters_optimization_dialog.h  simulation_window.cpp  simulation_window.h
src/ui/helpers/: FilterListItem.cpp  FilterListItem.h  Model_Bounds_Panel.cpp  Model_Bounds_Panel.h  Select_Subject_Panel.cpp  Select_Subject_Panel.h  Select_Time_Segment_Id_Panel.cpp  Select_Time_Segment_Id_Panel.h  Signal_Group_Widget.cpp  Signal_Group_Widget.h  Time_Segment_Group_Widget.cpp  Time_Segment_Group_Widget.h  filter_config_widgets.cpp  filter_config_widgets.h  general_container_edit.cpp  general_container_edit.h  gui_subchain.cpp  gui_subchain.h  moc_Model_Bounds_Panel.cpp  moc_Select_Subject_Panel.cpp  moc_Select_Time_Segment_Id_Panel.cpp
src/ui/simulation/: abstract_simulation_tab.cpp  abstract_simulation_tab.h  drawing_tab_widget.cpp  drawing_tab_widget.h  drawing_v2_tab_widget.cpp  drawing_v2_tab_widget.h  errors_tab_widget.cpp  errors_tab_widget.h  log_tab_widget.cpp  log_tab_widget.h  moc_abstract_simulation_tab.cpp  moc_drawing_tab.cpp  moc_drawing_tab_widget.cpp  moc_errors_tab_widget.cpp  moc_log_tab_widget.cpp
src/ui/ui filters/: db_reader.cpp  db_reader.h
